# Realtime_Analytics_with_Kafka_ClickHouse

./: .env.example  .gitignore  README.md  pyproject.toml
clickhouse/init/: 01_init.sql
consumers/: kafka_to_clickhouse.py
infra/: docker-compose.yml
producers/: sales_producer.py
scripts/: setup_kafka_topics.py
